--- a/loginform.css
+++ b/loginform.css
@@ -78,5 +78,15 @@ links{
     background-color: white;
     border-radius: 90px;
     padding: 10px 20px;
-    
+}
+.fieldset1{
+    border-radius: 0px 15px;
+    border: none;
+    text-align: center;
+    margin: 0% 30%;
+    background-image: url('texture_3.jpg');
+
+}
+.fieldset1 legend {
+    font-family: 'Arial Black' ;
 }
